[Wayland] layers.gpu-process.enabled = true is broken
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox69 | --- | fixed |
People
(Reporter: stransky, Assigned: aosmond)
References
(Blocks 1 open bug)
Details
Attachments
(3 files, 1 obsolete file)
|
2.83 KB,
patch
|
Details | Diff | Splinter Review | |
|
3.07 KB,
patch
|
Details | Diff | Splinter Review | |
|
47 bytes,
text/x-phabricator-request
|
Details | Review |
| Reporter | ||
Comment 1•8 years ago
|
||
| Reporter | ||
Comment 2•7 years ago
|
||
| Reporter | ||
Comment 3•7 years ago
|
||
| Reporter | ||
Comment 4•7 years ago
|
||
| Reporter | ||
Comment 5•7 years ago
|
||
| Reporter | ||
Updated•7 years ago
|
| Reporter | ||
Comment 6•7 years ago
|
||
| Reporter | ||
Comment 7•7 years ago
|
||
| Reporter | ||
Updated•7 years ago
|
| Reporter | ||
Comment 8•7 years ago
|
||
| Reporter | ||
Comment 9•7 years ago
|
||
| Reporter | ||
Comment 10•7 years ago
|
||
| Reporter | ||
Comment 11•7 years ago
|
||
I have no intention to work on this right now, giving back.
Comment 12•7 years ago
|
||
| Reporter | ||
Updated•7 years ago
|
Updated•7 years ago
|
| Assignee | ||
Updated•7 years ago
|
| Assignee | ||
Comment 13•7 years ago
|
||
Right now with WebRender, this will cause any qualifying nightly user on nightly to fallback to basic compositing because the GPU process crashes (they would need to opt into the GPU process mind you; still, this could be artifically suppressing WR).
| Assignee | ||
Comment 14•7 years ago
|
||
To achieve the same outcome as making MOZ_WIDGET_SUPPORTS_OOP_COMPOSITING, I believe we can just change gfxPlatform to disable the GPU process in the first place if Wayland is in use. From my own testing and comment 10, turning off MOZ_WIDGET_SUPPORTS_OOP_COMPOSITING will just cause the GPU process to fail to setup, and then as a result, disable the GPU process. It is better to do this explicitly in gfxPlatform to allow said users to retain WebRender (which is disabled if the GPU process goes down and we fallback to the parent process).
| Assignee | ||
Comment 15•7 years ago
|
||
Wayland does not support remote drawing for widgets from another process
at this time. As such, it is best to force disable the GPU process, so
that users will be able to get WebRender with Wayland.
Comment 16•7 years ago
|
||
Comment 17•7 years ago
|
||
| bugherder | ||
Updated•7 years ago
|
Description
•