Bug 1481405 - Force disable the GPU process if using Wayland. r=kats

Wayland does not support remote drawing for widgets from another process
at this time. As such, it is best to force disable the GPU process, so
that users will be able to get WebRender with Wayland.


Differential Revision: https://phabricator.services.mozilla.com/D32640